ChangeLog for Bash
==================

2008-02-04 Mike Kelly

	* -bash-3.2_p17.exheres-0, bash-3.2_p19.exheres-0,
	-bash-3.2_p25.exheres-0, bash-3.2_p33.exheres-0: Fix for new phases.
	Remove old versions.

2008-01-02 Bo Ørsted Andresen <zlin@exherbo.org>

	* +bash-3.2_p33.exheres-0: Bump. Add PS1 handling similar to what's in
	Gentoo.

2007-11-02 Mike Kelly <pioto@exherbo.org>

	* +bash-3.2_p19.exheres-0: Version bump(-ish). p25 is masked for now,
	until the issues with p20 are fixed.

2007-11-02 Mike Kelly <pioto@exherbo.org>

	* +bash-3.2_p25.exheres-0, +files, +files/bashrc,
	+files/bash-3.2-config.diff: Version bump. Add support for
	/etc/bash/bashrc.d/ (for bash-completion).

2007-07-15 Alexander Færøy <eroyf@eroyf.org>

	* -ChangeLog: Initial ChangeLog.
