@@ -1,0 +1,51 @@
+# Copyright 2007-2008 Bryan Østergaard
+# Distributed under the terms of the GNU General Public License v2
+
+PATCH_LEVEL=${P##*_p}
+
+MY_P=${P%_p*}
+S="${WORKDIR}/${MY_P}"
+
+DESCRIPTION="Bash shell"
+HOMEPAGE="http://www.gnu.org/software/bash"
+SRC_URI="mirror://gnu/bash/${MY_P}.tar.gz
+        $(for ((i=1; i<=PATCH_LEVEL; i++)); do
+            printf "mirror://gnu/bash/${MY_P}-patches/bash32-%03d\n" ${i}
+        done)"
+
+LICENSE="GPL-2"
+SLOT="0"
+PLATFORMS="~amd64 ~ia64 ~x86"
+MYOPTIONS="nls"
+
+DEPENDENCIES="build,run:
+                sys-libs/ncurses"
+
+DEFAULT_SRC_CONFIGURE_PARAMS="--bindir=/bin
+    --without-installed-readline
+    --with-curses"
+DEFAULT_SRC_CONFIGURE_OPTION_ENABLES="nls"
+
+src_prepare() {
+    local i patches
+    patches=(-p0)
+    for ((i=1; i<=PATCH_LEVEL; i++)); do
+        patches+=("${FETCHEDDIR}/bash32-$(printf "%03d" ${i})")
+    done
+    patches+=(-p1 "${FILESDIR}/${MY_P}-config.diff")
+
+    expatch "${patches[@]}"
+}
+
+src_install() {
+    emake DESTDIR="${D}" install || die "install failed."
+    dodoc README CHANGES AUTHORS NEWS ABOUT-NLS NOTES \
+        doc/{README,FAQ,INTRO} || die "dodoc failed"
+
+    dosym bash bin/sh || die "dosym bin/sh failed"
+
+    insinto /etc/bash
+    doins "${FILESDIR}/bashrc" || die "doins bashrc failed"
+
+    keepdir /etc/bash/bashrc.d
+}
