@@ -1,6 +1,10 @@
 ChangeLog for Bash
 ==================
 
+2008-05-04 Bo Ørsted Andresen
+
+	* +bash-3.2_p39.exheres-0, files/bash-3.2-config.diff: Version bump.
+
 2008-02-04 Mike Kelly
 
 	* -bash-3.2_p17.exheres-0, bash-3.2_p19.exheres-0,
